@@ -1,3 +1,7 @@
+2005-11-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/opt-11.c: New test.
+
 2005-11-29  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/open_access_1.f90: New test.
