@@ -1,5 +1,9 @@
 2005-11-30  Jakub Jelinek  <jakub@redhat.com>
 
+	* config/ia64/ia64.c (ia64_expand_tls_address): Add ORIG_OP1 argument.
+	Move ADDEND_{HI,LO} computation into TLS_MODEL_INITIAL_EXEC case.
+	(ia64_expand_move): Adjust caller.
+
 	* config/ia64/ia64.c (ia64_expand_atomic_op): Only use
 	fetchadd{4,8}.acq instruction if CODE is PLUS or MINUS, for MINUS
 	negate VAL.
